# MNNTaoAvatarLearn

./: .gitignore  CMakeLists.txt  README.MD
3rdLibs/MNN/lib/: MNN.lib
3rdLibs/spdlog/: async_logger-inl.h  common.h  mdc.h  pattern_formatter-inl.h
3rdLibs/spdlog/cfg/: env.h
3rdLibs/spdlog/details/: file_helper-inl.h  mpmc_blocking_q.h  os-inl.h  os.h  thread_pool-inl.h  thread_pool.h
3rdLibs/spdlog/fmt/: bin_to_hex.h
3rdLibs/spdlog/sinks/: ansicolor_sink-inl.h  ansicolor_sink.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  callback_sink.h  daily_file_sink.h  hourly_file_sink.h  kafka_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  stdout_sinks-inl.h  (+2 more)
cmake/: kaldi-native-fbank.cmake
include/: Api.h  MnnA2BSSession.h  MnnA2BSTypes.h  MnnASRSession.h  MnnASRSessionConfig.h  MnnLLMSession.h  MnnTTSSession.h  MnnTTSSessionConfig.h  ParseOptions.h  Platform.h  Recognizer.h  RecognizerConfig.h
source/A2bs/: AudioTo3dgsBlendShape.cc  AudioTo3dgsBlendShape.h  AudioToFrameBlendShape.cc  AudioToFrameBlendShape.h  GsBodyConverter.cc  GsBodyConverter.h  MnnA2BSSession.cc
source/Base/: Base64Decode.cc  Base64Decode.h  Bbpe.cc  Bbpe.h  Endpoint.cc  Endpoint.h  Features.cc  Features.h  Logger.cc  Logger.h  MnnASRSessionConfig.cc  ModelConfig.cc  ModelConfig.h  ParseOptions.cc  ParseOptions.h  RecognizerConfig.cc  RecognizerConfig.h  Resample.cc  Resample.h  SymbolTable.cc  SymbolTable.h  WaveFile.h  WaveReader.cc  WaveReader.h
source/Bertvits2/: AnToCn.cc  AnToCn.h  ChineseBert.cc  ChineseBert.h  ChineseG2p.cc  ChineseG2p.h  EnglishBert.cc  EnglishBert.h  EnglishG2p.cc  EnglishG2p.h  MnnBertvits2TTSSessionImpl.cc  MnnBertvits2TTSSessionImpl.h  Pinyin.cc  Pinyin.h  TTSGenerator.cc  TTSGenerator.h  TextPreprocessor.cc  TextPreprocessor.h  ToneAdjuster.cc  ToneAdjuster.h  WordSpliter.cc  WordSpliter.h
source/Core/: ContextGraph.cc  ContextGraph.h  GreedySearchDecoder.cc  GreedySearchDecoder.h  Hypothesis.cc  Hypothesis.h  MNNUtils.cc  MNNUtils.h  MnnASRSession.cc  MnnASRSessionImpl.h  MnnLLMSession.cc  MnnTTSSession.cc  MnnTTSSessionConfig.cc  Model.cc  Model.h  Ops.cc  Ops.h  Recognizer.cc  Recognizer.h  RecognizerImpl.h  Stream.cc  Stream.h  SymbolTable.cc  SymbolTable.h
source/Utils/: A2BSUtils.cc  A2BSUtils.h  FileUtils.cc  FileUtils.h  MathUtils.h  TextUtils.cc  TextUtils.h  Utils.cc  Utils.h
test/: TestMnnA2BSSession.cc  TestMnnASRSession.cc  TestMnnLLMSession.cc  TestMnnTTSSession.cc  TestModel.cc  TestParseOptions.cc  TestRecognizer.cc
